# moc-fluidsynth-decoder-plugin

./: .gitignore  0001-Add-FluidSynth-decoder-plugin.patch  Dockerfile  Makefile  README.md
.github/workflows/: docker_build_push.yml
moc/: README  THANKS  TODO  config.example.in  options.c
moc/decoder_plugins/: Makefile.am  decoders.m4
moc/decoder_plugins/fluidsynth/: .clang-format  Makefile.am  fluidsynth.c  fluidsynth.m4
moc/tools/: md5check.sh
